# PlanProof

./: .env.example  .gitignore  ADDRESS_PROPOSAL_IMPLEMENTATION.md  CHANGELOG.md  CORS_FIX_GUIDE.md  CRITICAL_ACTIONS.md  Dockerfile  EVIDENCE_CANDIDATE_DOCS_README.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LOCAL_SETUP_GUIDE.md  MIGRATION_GUIDE.md  Makefile  PROFESSIONAL_REVIEW.md  QUICK_REFERENCE.md  QUICK_WINS_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  REQUIREMENTS_ANALYSIS.md  RESTRUCTURING_COMPLETE.md  SCHEMA_COMPARISON.md  TEST_COVERAGE_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_IMPROVEMENT_FINAL.md  TEST_FIXES_COMPLETE.md  TEST_FIX_SUMMARY.md  UX_IMPROVEMENTS_SUMMARY.md  azure-resources-summary.md  check_schema.py  diagnose_run.py  docker-compose.yml  docker-entrypoint.sh  fix-cors.ps1  main.py  provision-storage.ps1  pyproject.toml  requirements-dev.txt  requirements-pinned.txt  requirements.txt  run_api.py  setup-dev.ps1  (+4 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 234e28a6f813_initial_schema_with_all_tables.py  7f3c0b4a1e2d_add_run_documents_table.py  8a4b5c6d7e8f_add_evidence_candidate_docs.py
archive/: ARCHITECTURE_REVIEW.md  CURRENT_STATUS.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OLD_README.md  PR_DESCRIPTION.md  REPOSITORY_REORGANIZATION.md  REPOSITORY_STRUCTURE_PROPOSAL.md  TESTING_COMPLETE.md  TEST_RESULTS.md
artefacts/: rule_catalog.json
artifacts/artefacts/: rule_catalog.json
artifacts/sample_data/: batch_final.json  batch_final_v2.json  batch_proof.json  batch_results.json  batch_test.json  extracted_layout_79.json  test_doc73.json
backend/: alembic.ini  init_db_no_postgis.py  main.py  requirements.txt  run_api.py  run_ui.py
backend/planproof/: alerting.py  aoai.py  config.py  db.py  docintel.py  enhanced_issues.py  health_monitor.py  issue_factory.py  secrets_manager.py  storage.py
backend/scripts/: README.md  add_columns.py  build_rule_catalog.py  check_runs.py  fix_existing_runs.py  fix_schema.py  smoke_test.py  summarize_json.py  test_api_query.py  test_auth.py  test_db_init.py  test_evidence_candidate_docs.py  test_ui_setup.py  validate_schema.py
config/: .env.example  README.md  production.env.example
docs/: API.md  API_INTEGRATION_GUIDE.md  API_READY.md  ARCHITECTURE.md  CODE_QUALITY_ASSESSMENT.md  CONTRIBUTING.md  DATABASE_CONNECTION_FIX.md  DATABASE_SCHEMA_MANAGEMENT.md  DEPLOYMENT.md  ENHANCED_ISSUE_MODEL.md  ERROR_TROUBLESHOOTING.md  FINAL_MVP_SUMMARY.md  IMPLEMENTATION_STATUS.md  MVP_COMPLETION_SUMMARY.md  NEW_UI_IMPLEMENTATION.md  PART_2_COMPLETE.md  PART_3_COMPLETE.md  PERFORMANCE_TROUBLESHOOTING.md  QUICKSTART.md  README.md  REQUIREMENTS_ASSESSMENT.md  TESTING_GUIDE.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_IMPROVEMENT.md  TEST_COVERAGE_REPORT.md  TROUBLESHOOTING.md  UX_REVAMP_STATUS.md  VSCODE_SETUP.md  accessibility.md  setup-local.md
docs/deployment/: docker-setup.md  docker-windows.md
docs/features/: EXTRACTED_FIELDS_UI_DISPLAY.md  PARENT_DISCOVERY_IMPLEMENTATION.md
docs/guides/: PHASE4_CERTIFICATES_FEES_COMPLETE.md
docs/reports/: .gitkeep
docs/troubleshooting/: cors-reference.md
frontend/: .env.example  README.md  TESTING_SUMMARY.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  main.tsx
frontend/test-results/: .last-run.json
frontend/tests/: README.md  all-runs.spec.ts  dashboard.spec.ts  fixtures.ts  my-cases.spec.ts  navigation.spec.ts  new-application.spec.ts  results.spec.ts
infrastructure/docker/: README.md  api.Dockerfile  backend.Dockerfile  docker-compose.api.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh
infrastructure/scripts/: provision-storage.ps1  start-docker-api.ps1  start-docker-api.sh  start_api.ps1  start_servers.sh  test-tunnel-deployment.sh  test_ui_automated.sh
planproof/: __init__.py  aoai.py  config.py  db.py  docintel.py  exceptions.py  issue_factory.py  storage.py
planproof/api/: __init__.py  dependencies.py  main.py
planproof/pipeline/: __init__.py  extract.py  field_mapper.py  ingest.py  llm_gate.py  modification_workflow.py  validate.py
planproof/rules/: catalog.py
planproof/services/: delta_service.py  export_service.py  resolution_service.py  review_report_service.py  rule_dependency.py  search_service.py  submission_classifier.py
planproof/ui/: auth.py  main.py  run_orchestrator.py
research/: README.md  __init__.py  cli.py  config.py  conftest.py  cost_tracker.py  db_reader.py  local_store.py  requirements.txt
research/community/: __init__.py  analysis.py  leiden.py
research/graph/: __init__.py  (+3 more)
scripts/: __init__.py  analyze_batch.py  eval_kpis.py
tests/: README.md  conftest.py  test_fixes.py
(+242 files in other folders)
